v1.2 bugfixes, scrollbar fixes, change time to ~1 hour

--- a/src/meta/styles/specific/all.css
+++ b/src/meta/styles/specific/all.css
@@ -8,7 +8,7 @@
     margin: auto;
     padding: 10px;
 
-    overflow: scroll;
+    overflow: auto;
 
     z-index: 10;
 
